package com.group02.openevent.model.enums;

public enum Role {
	ADMIN,
    CUSTOMER,
	HOST,
    DEPARTMENT,
    VOLUNTEER,
} 