' This file contains both Class Diagram and Sequence Diagram
' For better rendering, use the separate files:
' - login-class-diagram.puml
' - login-sequence-diagram.puml

@startuml Login_Class_Diagram

!define CONTROLLER_COLOR #E1F5FF
!define SERVICE_COLOR #FFF4E1
!define REPOSITORY_COLOR #E8F5E9
!define MODEL_COLOR #F3E5F5
!define DTO_COLOR #FFF9C4
!define CONFIG_COLOR #FFEBEE

package "Controller Layer" CONTROLLER_COLOR {
    class LoginController {
        - AuthService authService
        + showLoginPage(redirect, redirectUrl, model): String
    }
    
    class AuthController {
        - AuthService authService
        + login(LoginRequest): ResponseEntity<?>
        + register(RegisterRequest): ResponseEntity<?>
    }
}

package "Service Layer" SERVICE_COLOR {
    interface AuthService {
        + login(LoginRequest): AuthResponse
        + register(RegisterRequest): AuthResponse
    }
    
    class AuthServiceImpl {
        - IAccountRepo accountRepo
        - IUserRepo userRepo
        - PasswordEncoder passwordEncoder
        - HttpSession httpSession
        - SessionService sessionService
        - UserService userService
        + login(LoginRequest): AuthResponse
        + register(RegisterRequest): AuthResponse
        + loginWithSession(LoginRequest, HttpServletRequest): AuthResponse
        - redirectFor(Role): String
    }
    
    class CustomUserDetailsService {
        - IAccountRepo accountRepository
        - IUserRepo userRepo
        + loadUserByUsername(String): UserDetails
    }
    
    class UserService {
        + getUserByAccountId(Long): Optional<User>
        + getOrCreateUser(Account): User
    }
}

package "Repository Layer" REPOSITORY_COLOR {
    interface IAccountRepo {
        + findByEmail(String): Optional<Account>
        + existsByEmail(String): boolean
        + save(Account): Account
    }
    
    interface IUserRepo {
        + findByAccount_AccountId(Long): Optional<User>
        + findByAccount(Account): Optional<User>
        + findByAccount_Email(String): Optional<User>
    }
}

package "Model Layer" MODEL_COLOR {
    class Account {
        - Long accountId
        - String email
        - String passwordHash
        - String oauthProvider
        - String oauthProviderId
        - User user
    }
    
    class User {
        - Long userId
        - Account account
        - String name
        - String phoneNumber
        - String avatar
        - LocalDateTime dateOfBirth
        - String address
        - Customer customer
        - Host host
        - Admin admin
        - Department department
        + getRole(): Role
        + hasCustomerRole(): boolean
        + hasHostRole(): boolean
        + hasAdminRole(): boolean
        + hasDepartmentRole(): boolean
    }
    
    class CustomUserDetails {
        - Long accountId
        - String username
        - String password
        - String role
        - List<GrantedAuthority> authorities
    }
    
    enum Role {
        ADMIN
        CUSTOMER
        HOST
        DEPARTMENT
        VOLUNTEER
    }
}

package "DTO Layer" DTO_COLOR {
    class LoginRequest {
        - String email
        - String password
    }
    
    class AuthResponse {
        - Long accountId
        - String email
        - Role role
        - String redirectPath
    }
}

package "Config Layer" CONFIG_COLOR {
    class SecurityConfig {
        + PasswordEncoder passwordEncoder(): PasswordEncoder
        + DaoAuthenticationProvider authenticationProvider(): DaoAuthenticationProvider
        + AuthenticationManager authenticationManager(): AuthenticationManager
        + SecurityFilterChain securityFilterChain(): SecurityFilterChain
    }
    
    class CustomAuthenticationSuccessHandler {
        - UserService userService
        - HttpSessionRequestCache requestCache
        + onAuthenticationSuccess(HttpServletRequest, HttpServletResponse, Authentication): void
    }
}

' Relationships
LoginController --> AuthService
AuthController --> AuthService
AuthService <|.. AuthServiceImpl
AuthServiceImpl --> IAccountRepo
AuthServiceImpl --> IUserRepo
AuthServiceImpl --> PasswordEncoder
AuthServiceImpl --> HttpSession
AuthServiceImpl --> SessionService
AuthServiceImpl --> UserService

CustomUserDetailsService --> IAccountRepo
CustomUserDetailsService --> IUserRepo
CustomUserDetailsService ..|> UserDetailsService

IAccountRepo --> Account
IUserRepo --> User

Account "1" --> "1" User
User --> Role
User "1" --> "0..1" Customer
User "1" --> "0..1" Host
User "1" --> "0..1" Admin
User "1" --> "0..1" Department

AuthServiceImpl ..> LoginRequest
AuthServiceImpl ..> AuthResponse
AuthController ..> LoginRequest
AuthController ..> AuthResponse

CustomUserDetailsService ..> CustomUserDetails
CustomUserDetails ..|> UserDetails

SecurityConfig --> CustomUserDetailsService
SecurityConfig --> PasswordEncoder
SecurityConfig --> CustomAuthenticationSuccessHandler
CustomAuthenticationSuccessHandler --> UserService

@enduml

@startuml Login_Sequence_Diagram

actor User
participant "Browser" as Browser
participant "LoginController" as LoginCtrl
participant "AuthController" as AuthCtrl
participant "SecurityConfig" as Security
participant "CustomUserDetailsService" as UserDetailsSvc
participant "AuthServiceImpl" as AuthService
participant "IAccountRepo" as AccountRepo
participant "IUserRepo" as UserRepo
participant "PasswordEncoder" as PwdEncoder
participant "HttpSession" as Session
participant "CustomAuthenticationSuccessHandler" as SuccessHandler
participant "UserService" as UserSvc

== Show Login Page ==
User -> Browser: Navigate to /login
Browser -> LoginCtrl: GET /login
LoginCtrl -> Browser: Return login.html
Browser -> User: Display login form

== Form Login Process ==
User -> Browser: Submit login form (email, password)
Browser -> Security: POST /perform_login

activate Security
Security -> UserDetailsSvc: loadUserByUsername(email)
activate UserDetailsSvc
UserDetailsSvc -> AccountRepo: findByEmail(email)
activate AccountRepo
AccountRepo --> UserDetailsSvc: Optional<Account>
deactivate AccountRepo

alt Account not found
    UserDetailsSvc --> Security: UsernameNotFoundException
    Security --> Browser: Redirect to /login?error
    Browser --> User: Show error message
else Account found
    UserDetailsSvc -> UserRepo: findByAccount_AccountId(accountId)
    activate UserRepo
    UserRepo --> UserDetailsSvc: Optional<User>
    deactivate UserRepo
    
    UserDetailsSvc -> UserDetailsSvc: Create CustomUserDetails\n(accountId, email, passwordHash, role, authorities)
    UserDetailsSvc --> Security: CustomUserDetails
    deactivate UserDetailsSvc
    
    Security -> PwdEncoder: matches(rawPassword, encodedPassword)
    activate PwdEncoder
    PwdEncoder --> Security: boolean
    deactivate PwdEncoder
    
    alt Password mismatch
        Security --> Browser: Redirect to /login?error
        Browser --> User: Show error message
    else Password matches
        Security -> SuccessHandler: onAuthenticationSuccess(request, response, authentication)
        activate SuccessHandler
        SuccessHandler -> UserSvc: getUserByAccountId(accountId)
        activate UserSvc
        UserSvc -> UserRepo: findByAccount_AccountId(accountId)
        activate UserRepo
        UserRepo --> UserSvc: Optional<User>
        deactivate UserRepo
        UserSvc --> SuccessHandler: Optional<User>
        deactivate UserSvc
        
        SuccessHandler -> Session: setAttribute("USER_ID", userId)
        SuccessHandler -> Session: setAttribute("USER_ROLE", role)
        
        alt Has saved request
            SuccessHandler -> SuccessHandler: Get saved request URL
            SuccessHandler --> Browser: Redirect to saved URL
        else Has redirect parameter
            SuccessHandler -> SuccessHandler: Get redirect from query param
            SuccessHandler --> Browser: Redirect to custom URL
        else Default
            SuccessHandler --> Browser: Redirect to "/"
        end
        deactivate SuccessHandler
        Browser --> User: Redirect to target page
    end
end
deactivate Security

== REST API Login (Alternative Flow) ==
User -> Browser: POST /api/auth/login (JSON)
Browser -> AuthController: POST /api/auth/login
activate AuthController
AuthController -> AuthService: login(LoginRequest)
activate AuthService

AuthService -> AuthService: Validate email and password

AuthService -> AccountRepo: findByEmail(email)
activate AccountRepo
AccountRepo --> AuthService: Optional<Account>
deactivate AccountRepo

alt Account not found
    AuthService --> AuthController: IllegalArgumentException
    AuthController --> Browser: 401 Unauthorized
    Browser --> User: Error response
else Account found
    AuthService -> PwdEncoder: matches(password, passwordHash)
    activate PwdEncoder
    PwdEncoder --> AuthService: boolean
    deactivate PwdEncoder
    
    alt Password mismatch
        AuthService --> AuthController: IllegalArgumentException
        AuthController --> Browser: 401 Unauthorized
        Browser --> User: Error response
    else Password matches
        AuthService -> UserRepo: findByAccount_AccountId(accountId)
        activate UserRepo
        UserRepo --> AuthService: Optional<User>
        deactivate UserRepo
        
        AuthService -> User: getRole()
        User --> AuthService: Role
        
        AuthService -> Session: setAttribute("USER_ID", userId)
        AuthService -> Session: setAttribute("USER_ROLE", role)
        
        AuthService -> AuthService: redirectFor(role)
        AuthService --> AuthController: AuthResponse(accountId, email, role, redirectPath)
        deactivate AuthService
        
        AuthController --> Browser: 200 OK + AuthResponse
        deactivate AuthController
        Browser --> User: Success response with redirect path
    end
end

@enduml

